--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
-body {
-
+body{
+ background-color: #F7A173;
+}
+h1{
+  color: #76B8D0;
+  font-size:400%;
+  letter-spacing: 4px;
+ text-decoration: underline;
+ text-decoration-color: #28AFB0;
+}
+h2{
+  color: #76B8D0;
+  font-size:400%;
+  letter-spacing: 4px;
+ text-decoration: underline;
+ text-decoration-color: #28AFB0;
+}
+h3{
+   font-size:350%;
+}
+h4{
+  font-size: 200%;
+}
+img{
+  width:400px;
+  border-style: double;
+  border-color: #FCE4D8;
+  border-width: 10px;
+}
+ul{
+  list-style-type: none;
+  text-align: center;
+}
+li{
+  float: left;
+}
+li a{
+  padding: 20px;
+  color:  #28AFB0;
+  font-family: "Monaco" , Monospace;
+  text-decoration: none;
+  border: dashed;
+} 
+li a:hover{
+  background-clor: #76B8D0;
+  
 }
