--- a/style3.css
+++ b/style3.css
@@ -1,1 +1,38 @@
-
+ h1{
+  color: #76B8D0;
+  font-size:400%;
+  letter-spacing: 4px;
+ text-decoration: underline;
+ text-decoration-color: #28AFB0;
+  }
+body{
+ background-color: #F7A173;
+}
+h2{
+  color: #76B8D0;
+  font-size: 250%;
+  letter-spacing: 4px;
+  text-decoration: underline;
+ text-decoration-color: #28AFB0;
+}
+  h3 {
+   color: #76B8D0;
+  font-size: 250%;
+  letter-spacing: 4px;
+  text-decoration: underline;
+ text-decoration-color: #28AFB0;
+  }
+ul{
+  list-style-type: none;
+  text-align: center;
+}
+li{
+  float: left;
+}
+li a{
+  padding: 20px;
+  color:  #28AFB0;
+  font-family: "Monaco" , Monospace;
+  text-decoration: none;
+  border: dashed;
+} 
